--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,4 @@
+
 .about-text{
     display: flex;
     flex-direction: column;
@@ -17,4 +18,9 @@
 }
 .about-text a{
 margin-top: 20px;
+}
+@media (max-width:640px){
+    .main{
+        margin-top: 10px;
+    }
 }
