--- a/Réservation.css
+++ b/Réservation.css
@@ -1,11 +1,42 @@
 
-select{
-    border: 1px solid #555;
-    height: 40px;
-    width: 200px;
-    padding: 0 15px;
-    margin-right: 20px;
+.reserve {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(
+     rgba(0, 0, 0, 0.658),
+     rgba(110, 67, 67, 0.384)
+    ),
+    url("pexels-jatin-jangid-8024029.jpg");
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;     
 }
-.S1{
-    margin-top: 20%;
+
+select{
+    background-color: #E5E5E5;
+    margin-top: 4%;
+    height: 40px;
+    width: 300px;
+    margin-left: 2%;   
+}
+option{
+    background-color: #E5E5E5;
+}
+#select h2{
+    margin-top: 7%;
+    color: #E5E5E5;
+    font-size: 33px
+}
+#select h4{
+    color: #E5E5E5;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+    text-align: center;
 }
