--- a/cars.css
+++ b/cars.css
@@ -20,6 +20,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     position: fixed;
+    top: 0;
 }
 .logo{
     font-size: 30px;
