--- a/Réservation.css
+++ b/Réservation.css
@@ -3,22 +3,22 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(
+  
+    /* background-image: linear-gradient(
      rgba(0, 0, 0, 0.658),
      rgba(110, 67, 67, 0.384)
     ),
     url("pexels-mihis-alex-21014.jpg");
     background-attachment: fixed;
     background-position: center;
-    background-size: cover;     
+    background-size: cover;      */
 }
+
 
 select{
     color: #14213D;
     font-size: 14px;
     background-color: #E5E5E5;
-    margin-top: %;
     height: 40px;
     width: 200px;
     margin-left: 1%;   
@@ -38,7 +38,15 @@ body {
     justify-content: space-between;
     height: 125vh;
     text-align: center;
-    margin-top: 0%;
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.658),
+        rgba(110, 67, 67, 0.384)
+       ),
+       url("pexels-mihis-alex-21014.jpg");
+       background-attachment: fixed;
+       background-position: center;
+       background-size: cover;     
+ 
 }
 #number{
     background-color: #E5E5E5;
@@ -47,22 +55,37 @@ body {
     width: 200px;
     margin-left: 1%; 
 }
-#Bottom{
+#select a{
     color: #FCA311;
-    margin-top: 10%;
-    height: 40px;
-    width: 150px;
-    margin-left: 1%;
+    margin-left: 5%;
+    font-size: 26px;
 }
 #Bottom:hover{
     color: #FCA311;    
 }
 #affichage{
-    background-color: #E5E5E5;
-    color: rgb(0, 0, 0);
+    display: none;
+    background-color: #14213D;
+    color: #E5E5E5;
     height: 80px;
     width: 120px;
     margin-top: 5%;
     margin-left: 45%;
 
+}
+@media (max-width :640px) {
+    .reserve{
+      padding: 70px 20px;
+    }
+    #select{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        justify-items: center;
+        align-items: center;
+        gap: 30px;
+    }
+    #affichage{
+        margin-left: 0%;
+    }
 }
